...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onEnterClicked"
        android:shadowColor="@color/white"
        android:text="@string/enter"
        android:textColor="@color/seafoam"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_spinner"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/class_size_spinner"
        android:layout_width="220dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_spinner"
        app:layout_constraintVertical_bias="0.77"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/number_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quarter_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
...
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/subject_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
...
