<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classes_list"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="91dp"

        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_session_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="620dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onStopPopupEnterSessionNameClicked"
        android:shadowColor="@color/white"
        android:text="Enter Session Name"
        android:textColor="@color/seafoam"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
...
